fix: Improve app startup and error handling
Enhance the application's initial loading and error display.
This includes refining the CSS for better visual presentation on startup and implementing more robust error handling during React root rendering.
The `geminiService` now includes a more secure check for the API key and provides a clearer message if it's missing.
The app initialization logic has been updated to ensure it runs after the DOM is fully loaded.

--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
     <style>
       body {
         font-family: 'Tajawal', sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f8fafc;
+      }
+      #root {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
       }
       .glass {
         background: rgba(255, 255, 255, 0.7);
         backdrop-filter: blur(12px);
         -webkit-backdrop-filter: blur(12px);
-      }
-      /* منع ظهور الفراغات البيضاء أثناء التحميل */
-      #root {
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
       }
     </style>
     <script type="importmap">
